<resources>
    <string name="app_name">Computer Awareness</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Computer Awareness</string>
    <string name="nav_header_subtitle">sriandroidapps.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">srinivasinfotech</string>
    <string name="version_name">1.0</string>
    <string name="menu_home">Home</string>
    <string name="menu_rateApp">Rate this App</string>
    <string name="menu_share">Share App</string>

    <string name="pie_chart_title">Result</string>
    <string name="inside_title">Input the \n numbers below!</string>
    <string name="burn">Burn.</string>
    <string name="cons">Cons.</string>
    <string name="add">Add</string>
    <string name="questions_20_time_20_min">Questions:20 | Time:20 min</string>
    <string name="start">Start</string>
    <string name="chapter_wise_mock_tests">Chapter Wise Mock Tests</string>
    <string name="ok">OK</string>
    <string name="time_00_00">time:00:00</string>
    <string name="score_0">Score:0</string>
    <string name="result">Result</string>
    <string name="_100">100%</string>
    <string name="home">Home</string>
    <string name="answers">Answers</string>
    <string name="back">Back</string>
    <string name="set_1">Set-1</string>
    <string name="set_2">Set-2</string>
    <string name="set_3">Set-3</string>
    <string name="set_4">Set-4</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="do_you_want_to_exit_this_app">Do you want to exit this app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_quit_the_test_any_way">Do you want to quit the test any way?</string>
    <string name="exit">Exit</string>
    <string name="submit">Submit</string>
    <string name="test_finished">Test Finished.</string>
    <string name="app_id">ca-app-pub-8390687839941362~3626366155</string>
    <string name="banner_id">ca-app-pub-8390687839941362/1514389899</string>
    <string name="interstitialAd_id">ca-app-pub-8390687839941362/7696654867</string>
    <string name="native_ad_id">ca-app-pub-8390687839941362/3897828898</string>
</resources>