<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rateApp"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_rateApp" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
    </group>


            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/privacy"
                    android:icon="@drawable/ic_privacy"
                    android:title="Privacy Policy" />
                <item
                    android:id="@+id/terms"
                    android:icon="@drawable/ic_terms_and_conditions"
                    android:title="Terms &amp; Conditions" />

            </group>


</menu>