<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/my_template"
        app:gnt_template_type="@layout/gnt_small_template_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:padding="15dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_exit_this_app"
            android:textColor="@color/gnt_black"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorWhite"
                android:background="@color/gnt_red"/>
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
