<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/custom_ripple"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_title"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:visibility="invisible"
            android:src="@drawable/computer" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:weightSum="4.0"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/questions_20_time_20_min"
        android:textColor="#2E2C2C"
        android:textSize="13sp"
        android:layout_weight="3.0"
        android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/start"
            android:textColor="#0099FF"
            android:textSize="13sp"
            android:textStyle="bold"
            android:gravity="right"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>