<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Warning! Test is Running."
            android:textColor="@color/colorWhite"
            android:background="@color/red"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:padding="15dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/attempted_questions"
            android:text="@string/do_you_want_to_quit_the_test_any_way"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Do you want to quit the test any way?"
            android:textColor="@color/gnt_black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorWhite"
                android:background="@color/gnt_red"/>
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"/>

        </RelativeLayout>

</LinearLayout>