<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SetsActivity">

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/my_template"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        app:gnt_template_type="@layout/gnt_small_template_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/set1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/custom_ripple"
                android:gravity="center"
                android:text="@string/set_1"
                android:textStyle="bold"
                 android:textColor="@color/red"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/set2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/custom_ripple"
                android:gravity="center"
                android:text="@string/set_2"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/set3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/custom_ripple"
                android:gravity="center"
                android:text="@string/set_3"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/set4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/custom_ripple"
                android:gravity="center"
                android:text="@string/set_4"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>