<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ResultActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/my_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:gnt_template_type="@layout/gnt_small_template_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/l1"
        android:layout_below="@id/my_template"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/result"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal">

                    <!-- ProgressBar that represents a total of 100% -->
                    <ProgressBar
                        android:id="@+id/background_progressbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/stats_full"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/stats"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="75"
                        android:progressDrawable="@drawable/stats_progress"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/per"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <!-- ProgressBar that represents a chart slice, where "android:progress" is the % value of the slice -->

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/time_taken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Large Text"
                    android:textAlignment="center"
                    android:textColor="#1A237E"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/home_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foreground="@drawable/custom_ripple"
                android:background="@color/colorAccent"
                android:text="@string/home"
                android:textColor="#fff" />


            <Button
                android:id="@+id/showqa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foreground="@drawable/custom_ripple"
                android:background="@color/colorAccent"
                android:text="@string/answers"
                android:textColor="#fff" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foreground="@drawable/custom_ripple"
                android:background="@color/colorAccent"
                android:text="@string/back"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
</ScrollView>
